fixed bug with desktop scroll and fixed scroll only on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -217,8 +217,7 @@ article, aside, figure, footer, header, nav, section {
 
 @media (max-width: 680px) {
   .navbar {
-    background-color: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(10px); }
+    background-color: rgba(255, 255, 255, 0.95); }
     .navbar .searchbar-container .logo {
       right: 10px; }
     .navbar .searchbar-container .searchbar {
@@ -230,7 +229,7 @@ article, aside, figure, footer, header, nav, section {
   position: relative;
   float: left;
   width: 20%;
-  height: 100%;
+  height: auto;
   padding: 10px; }
   .card .pk-container {
     position: relative;
@@ -331,7 +330,7 @@ article, aside, figure, footer, header, nav, section {
       .card .pk-container .pk-img {
         padding: 10px 10px 5px 10px; }
         .card .pk-container .pk-img img {
-          max-width: 48px; }
+          max-width: 96px; }
       .card .pk-container .name {
         text-align: center;
         font-size: 15px;
@@ -595,21 +594,21 @@ article, aside, figure, footer, header, nav, section {
   .wrapper-fixed .content-side .pk-header {
     padding: 20px;
     padding-top: 20px;
-    padding-bottom: 0px; }
+    padding-bottom: 10px; }
     .wrapper-fixed .content-side .pk-header .pk-img {
       height: 100%;
       margin-right: 20px;
       padding-top: 14px; }
       .wrapper-fixed .content-side .pk-header .pk-img img {
-        max-width: 48px; }
+        max-width: 96px; }
     .wrapper-fixed .content-side .pk-header .number {
       font-size: 12px;
-      top: 10px;
-      left: 88px; }
+      top: 40px;
+      left: 136px; }
     .wrapper-fixed .content-side .pk-header .name {
-      font-size: 20px;
-      line-height: 24px;
-      padding-top: 10px; }
+      font-size: 24px;
+      line-height: 28px;
+      padding-top: 40px; }
   .wrapper-fixed .content-side .content-side-info {
     padding: 20px;
     padding-top: 0; }
@@ -638,7 +637,8 @@ html {
   -webkit-overflow-scrolling: touch;
   -webkit-tap-highlight-color: rgba(42, 60, 75, 0.05);
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+  -ms-text-size-adjust: 100%;
+  height: 100%; }
 
 html {
   box-sizing: border-box; }
@@ -685,22 +685,11 @@ a {
   font-weight: 400;
   text-transform: none; }
 
-html {
-  overflow: hidden;
-  height: 100%; }
-
-body {
-  height: 100%; }
-
-.card {
-  height: auto; }
-
 .content {
   display: block;
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: auto;
   max-width: 1200px;
   margin: 0 auto;
   padding-top: 70px;
@@ -739,6 +728,15 @@ body {
         transition: all 250ms ease; }
 
 @media (max-width: 680px) {
+  html {
+    overflow: hidden; }
+
+  .scroll-content-list {
+    height: 100%;
+    overflow: auto;
+    width: 100%;
+    padding-bottom: 50px; }
+
   .content {
     padding-top: 68px !important;
     padding: 5px;
