--- a/scss/componentes/_navbar.scss
+++ b/scss/componentes/_navbar.scss
@@ -90,8 +90,7 @@
 
 @media (max-width: 680px) {
     .navbar {
-        background-color: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(10px);
+        background-color: rgba(255, 255, 255, 0.95);
         .searchbar-container {
             .logo {
                 right: 10px;
