--- a/scss/componentes/_sidebar.scss
+++ b/scss/componentes/_sidebar.scss
@@ -329,7 +329,7 @@
         .pk-header {
             padding: 20px;
             padding-top: 20px;
-            padding-bottom: 0px;
+            padding-bottom: 10px;
             
             .pk-img {
                 height: 100%;
@@ -337,19 +337,19 @@
                 padding-top: 14px;
 
                 img {
-                    max-width: 48px;
+                    max-width: 96px;
                 }
 
             }
             .number {
                 font-size: 12px;
-                top: 10px;
-                left: 88px;
+                top: 40px;
+                left: 136px;
             }
             .name {
-                font-size: 20px;
-                line-height: 24px;
-                padding-top: 10px;
+                font-size: 24px;
+                line-height: 28px;
+                padding-top: 40px;
             }
             .type-container {
 
