--- a/scss/layout/_site.scss
+++ b/scss/layout/_site.scss
@@ -4,6 +4,8 @@ html {
     -webkit-tap-highlight-color: rgba(42, 60, 75, 0.05);
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+//    overflow: hidden;
+    height: 100%;
 }
 
 html {
@@ -18,7 +20,6 @@ body {
     width: 100%;
     height: 100%;
     background-color: #FFFFFF;
-//    font-family: 'Open Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
 a {
@@ -54,15 +55,12 @@ a {
     font-weight: 400;
     text-transform: none;
 }
-html {overflow: hidden; height: 100%}
-body {height: 100%}
-.card {height: auto}
+
 .content {
     display: block;
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: auto;
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 70px;
@@ -114,7 +112,14 @@ body {height: 100%}
 
 }
 @media (max-width: 680px) {
-    
+    html { overflow: hidden;}
+    .scroll-content-list {
+        height: 100%;
+        overflow: auto;
+        width: 100%;
+        padding-bottom: 50px;
+
+    }
     .content {
         padding-top: 68px !important;
         padding: 5px;
